--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,7 @@ button {
 }
 
 a:hover {
-  color: green;
+  color: #3b873e;
 }
 
 button.green-button {
@@ -59,6 +59,8 @@ button.green-button a:hover {
     url("/hero-img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center top;
+  background-attachment: fixed;
   min-height: 400px;
   height: 85svh;
   max-height: 600px;
@@ -77,12 +79,34 @@ button.green-button a:hover {
 
 .img-content {
   min-height: fit-content;
-  padding-block: 50px;
   padding-inline: 40px;
   background-image: linear-gradient(rgba(3, 65, 5, 0.6), rgba(3, 65, 5, 0.8)),
     url("/hero-img.jpg");
 
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: right center;
+  background-attachment: fixed;
   color: #fff;
+}
+
+/* HTML: <div class="loader"></div> */
+.loader {
+  width: 50px;
+  padding: 8px;
+  margin-inline: auto;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #3b873e;
+  --_m: conic-gradient(#0000 10%, #000), linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+  mask: var(--_m);
+  -webkit-mask-composite: source-out;
+  mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+@keyframes l3 {
+  to {
+    transform: rotate(1turn);
+  }
 }
