--- a/src/index.css
+++ b/src/index.css
@@ -112,3 +112,18 @@ button.green-button a:hover {
     transform: rotate(1turn);
   }
 }
+
+.fade-in-up {
+  animation: fadeInUp 1s ease-out forwards;
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
