--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.cdnfonts.com/css/satoshi");
 @import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -28,7 +29,7 @@ p {
 
 a,
 button {
-  cursor: poSatoshi;
+  cursor: pointer;
 }
 
 .active {
@@ -135,7 +136,7 @@ button.green-button a:hover {
 /* HTML: <div class="loader"></div> */
 .loader {
   width: 50px;
-  padding: 8px;
+  padding: 5px;
   margin-inline: auto;
   aspect-ratio: 1;
   border-radius: 50%;
