--- a/src/index.css
+++ b/src/index.css
@@ -58,12 +58,7 @@ button.green-button a:hover {
 }
 
 .hero {
-  background-image: linear-gradient(rgba(3, 65, 5, 0.6), rgba(3, 65, 5, 0.8)),
-    url("/hero-img.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center top;
-  background-attachment: fixed;
+  position: relative;
   min-height: 400px;
   height: 85svh;
   max-height: 600px;
@@ -71,6 +66,35 @@ button.green-button a:hover {
   justify-content: center;
   align-items: center;
   color: #fff;
+  overflow: hidden; /* Ensure no overflow if video is larger than the container */
+}
+
+.background-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: 0;
+  object-fit: cover; /* Ensures the video covers the container */
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(3, 65, 5, 0.6), rgba(3, 65, 5, 0.8));
+  z-index: 1;
+}
+
+.hero > .flex {
+  position: relative;
+  z-index: 2; /* Bring the content above the video and overlay */
 }
 
 .grid-layout {
