code splitting with lazy loading

--- a/src/index.css
+++ b/src/index.css
@@ -108,7 +108,7 @@ button.green-button a:hover {
   min-height: fit-content;
   padding-inline: 40px;
   background-image: linear-gradient(rgba(3, 65, 5, 0.6), rgba(3, 65, 5, 0.8)),
-    url("/hero-img.jpg");
+    url("/video-poster.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: right center;
@@ -157,8 +157,8 @@ button.green-button a:hover {
 
 /* HTML: <div class="loader"></div> */
 .loader {
-  width: 50px;
-  padding: 8px;
+  width: 45px;
+  padding: 5px;
   margin-inline: auto;
   aspect-ratio: 1;
   border-radius: 50%;
